# drugos

./: .gitignore  Team_Cosmic_Build_Process_Updated.docx
docs/: INTEGRATION.md  KNOWN_ISSUES.md  VERIFICATION.md
dump/: AUDIT_FIXES_v5.md  AUDIT_FIXES_v7.md  FORENSIC_AUDIT_REPORT.md  Makefile  README.md  V18_ROOT_FIX_VERIFICATION_REPORT.md  V19_ROOT_FIX_VERIFICATION_REPORT.md  V20_ROOT_FIX_VERIFICATION_REPORT.md  V21_ROOT_FIX_VERIFICATION_REPORT.md  V22_ROOT_FIX_VERIFICATION_REPORT.md  V23_ROOT_FIX_VERIFICATION_REPORT.md  V24_ROOT_FIX_VERIFICATION_REPORT.md  V25_ROOT_FIX_VERIFICATION_REPORT.md  V26_FIX_VERIFICATION_REPORT.md  V26_VERIFICATION_REPORT.md  V27_ROOT_FIX_VERIFICATION_REPORT.md  V28_ROOT_FIX_VERIFICATION_REPORT.md  V34_MASTER_FIX_REPORT.md  V41_ROOT_FIX_VERIFICATION_REPORT.md  V42_SEV1_VERIFICATION_REPORT.md  V43_SEV1_FIX_REPORT.md  V43_SEV2_FIX_REPORT.md  V44_ROOT_FIX_README.md  V45_FINAL_README.md  V45_REAL_DATA_README.md  requirements.txt  run_unified.py  v10_FORENSIC_AUDIT_FIX_REPORT.md  v11_FINAL_VALIDATION_REPORT.md  v12_ROOT_FIX_VERIFICATION_REPORT.md  v13_ROOT_FIX_VERIFICATION_REPORT.md  v14_FORENSIC_ROOT_FIX_VERIFICATION_REPORT.md  v15_FORENSIC_ROOT_FIX_VERIFICATION_REPORT.md  v16_FORENSIC_ROOT_FIX_VERIFICATION_REPORT.md  v17_RESIDUAL_ROOT_FIX_VERIFICATION_REPORT.md  v9_AUDIT_FIXES_SUMMARY.md  worklog.md
logs/transformations/: chembl.jsonl
phase1/: .editorconfig  .gitignore  CHANGELOG.md  CHANGES_FIXED.md  FIXES_SUMMARY.md  Makefile  README.md  SCI_FIXES_SUMMARY.md  docker-compose.yml  requirements-dev.txt  requirements.txt
phase1/airflow/: __init__.py
phase1/cleaning/: MIGRATION.md  SCHEMA.md  __init__.py  __init__.pyi  _constants.py  confidence.py  deduplicator.py  missing_values.py  normalizer.py
phase1/config/: .env.example  __init__.py  __init__.pyi  settings.py
phase1/dags/: chembl_dag.py  disgenet_dag.py  drugbank_dag.py  master_pipeline_dag.py  omim_dag.py  pubchem_dag.py  string_dag.py  uniprot_dag.py
phase1/data/: uniprot_organism_crosswalk.yaml
phase1/database/: __init__.py  __init__.pyi  base.py  connection.py  loaders.py  models.py
phase1/docker/: Dockerfile.airflow
phase1/entity_resolution/: __init__.py  __init__.pyi  base.py  drug_resolver.py  protein_resolver.py  resolver_utils.py
phase1/exporters/: neo4j_exporter.py
phase1/pipelines/: __init__.py  __init__.pyi  __main__.py  _http_client.py  base_pipeline.py  chembl_pipeline.py  disgenet_pipeline.py  download_all.py  drugbank_pipeline.py  omim_pipeline.py  pathways_pipeline.py  pubchem_pipeline.py  string_pipeline.py  (+1 more)
phase2/: RELEASE_NOTES.md
phase2/drugos_graph/: .env.example  README.md  __init__.py  __main__.py  _loader_protocol.py  chemberta_encoder.py  chembl_loader.py  clinicaltrials_loader.py  compliance.md  config.py  disgenet_loader.py  drkg_loader.py  drugbank_parser.py  entity_resolver.py  entity_resolver_DATA_DICTIONARY.md  entity_resolver_DECISIONS.md  entity_resolver_README.md  evaluation.py  exceptions.py  geo_loader.py  gpu_utils.py  graph_queries.py  graph_stats.py  graph_transformer_model.py  id_crosswalk.py  kg_builder.py  mlflow_tracker.py  model_protocol.py  morgan_fingerprint_encoder.py  negative_sampling.py  omim_loader.py  opentargets_loader.py  phase1_bridge.py  pubchem_loader.py  pyg_builder.py  pyproject.toml  requirements.txt  run_pipeline.py  schemas.py  score_calibration.py  (+7 more)
phase2/drugos_graph/data/: clinicaltrials_data_dictionary.md  label_dictionary.md  label_map.yaml  verified_uniprot_gene_crosswalk.yaml
scripts/: download_free_data_sources.py  run_v9_verification.py
tests/: test_compound1_root_fixes.py  test_id_unification.py  test_v36_forensic_fixes.py  test_v37_forensic_fixes.py  test_v38_forensic_fixes.py  test_v41_sev1_fixes.py  test_v42_sev1_fixes.py  test_v43_compound_fixes.py  test_v43_deadcode_fixes.py  test_v43_scientific_fixes.py  test_v43_sev1_fixes.py  test_v43_sev2_fixes.py  test_v43_sev3_fixes.py  test_v43_sev4_fixes.py  test_v44_root_fix_verification.py  test_v45_compound2_root_fixes.py  v14_forensic_root_fix_verification.py
(+261 files in other folders)
